<resources>
    <!-- App Name -->
    <string name="app_name">FinTrack</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Title -->
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_analytics">Analytics</string>
    <string name="title_categories">Categories</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_category">Add Category</string>
    <string name="title_modify_category">Modify Category</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="title_modify_transaction">Modify Transaction</string>
    <string name="title_income">Income</string>
    <string name="title_outcome">Outcome</string>
    <string name="title_remainder">Remainder</string>
    <string name="title_last_transaction">Last Transaction</string>
    <string name="title_greet">Hi %s!</string>
    <string name="title_greet_alt">Hello!</string>
    <string name="subtitle_greet">Take control of your financial journey now</string>
    <string name="title_transaction_type">Transaction Type</string>
    <string name="title_transaction_detail">Transaction Detail</string>
    <string name="title_personal_data">Personal Data</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_logout">Logout</string>
    <string name="title_account_setting">Account Setting</string>

    <!-- Hint & Helper -->
    <string name="hint_user_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_category_name">Category Name</string>
    <string name="hint_transaction_type">Select Transaction Type</string>
    <string name="hint_transaction_title">Title</string>
    <string name="hint_transaction_notes">Notes (Optional)</string>
    <string name="hint_transaction_amount">Amount</string>
    <string name="hint_transaction_date">Date</string>
    <string name="hint_transaction_category">Select Category</string>
    <string name="helper_empty_email">Email should not be empty</string>
    <string name="helper_invalid_email">The given email is invalid</string>
    <string name="helper_empty_password">Password should not be empty</string>
    <string name="helper_invalid_password">Password must contains at least 8 characters</string>
    <string name="helper_empty_user_name">Name should not be empty</string>
    <string name="helper_invalid_user_name">The given name must not contains any number or special characters</string>
    <string name="helper_empty_category_name">Category name should not be empty</string>
    <string name="helper_invalid_category_name">The given category name must not contains any number or special characters</string>
    <string name="helper_empty_transaction_type">Transaction type must be selected</string>
    <string name="helper_empty_transaction_category">Transaction category must be selected</string>
    <string name="helper_empty_transaction_title">Transaction title should not be empty</string>
    <string name="helper_invalid_transaction_title">The given title must not contains any number or special characters</string>
    <string name="helper_empty_category_icon">Icon for the category must be selected</string>
    <string name="helper_empty_transaction_amount">Transaction amount should not be empty</string>
    <string name="helper_transaction_amount_zero">Transaction amount cannot be 0</string>
    <string name="helper_empty_transaction_date">Transaction date should not be empty</string>

    <!-- Button -->
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_add_category">Add Category</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_add_transaction">Add Transaction</string>

    <!-- Placeholders Text -->
    <string name="text_register">Don\'t have an account?</string>
    <string name="text_login">Already have an account?</string>
    <string name="coming_soon">Coming Soon</string>

    <!-- Message -->
    <string name="success_register">Your account has been registered</string>
    <string name="success_login">Success login as %s</string>
    <string name="success_add_category">You have successfully added a new category \'%s\'</string>
    <string name="success_update_category">You have successfully updated the \'%s\' category</string>
    <string name="success_remove_category">You have successfully removed the category \'%s\'</string>
    <string name="success_add_transaction">You have successfully added a new transaction \'%s\'</string>
    <string name="success_update_transaction">You have successfully updated the \'%s\' transaction</string>
    <string name="success_remove_transaction">You have successfully removed the transaction \'%s\'</string>
    <string name="success_logout">Logout successfully</string>
    <string name="success_request_forgot_password">Password reset instructions sent to your email</string>

    <string name="error_check_input">Please check your input</string>
    <string name="error_category_not_found">Category not found</string>
    <string name="error_transaction_not_found">Transaction not found</string>
    <string name="error_request_forgot_password">Failed to request password reset</string>

    <!-- Content Description -->
    <string name="desc_category_icon">Category Icon</string>
    <string name="desc_transaction_icon">Transaction Icon</string>
    <string name="desc_transaction_type_icon">Transaction Type Icon</string>
    <string name="desc_setting_icon">Setting Icon</string>

    <!-- Prompt -->
    <string name="prompt_transaction_category">Can\'t find a suitable category?\nConsidering to add your own category</string>
    <string name="title_manage_category">Manage Category</string>
    <string name="title_manage">Manage</string>

</resources>