<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard_selector"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_transactions_selector"
        android:title="@string/title_transactions" />

    <item
        android:enabled="false"
        android:title=""
        app:showAsAction="never" />

    <item
        android:id="@+id/analyticFragment"
        android:icon="@drawable/ic_analytics_selector"
        android:title="@string/title_analytics" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_selector"
        android:title="@string/title_profile" />
</menu>